# STT-tool

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker_api_logs.sh  docker_check_port.sh  docker_commands.txt  docker_compose_logs.sh  docker_worker_logs.sh  pyproject.toml  test_api.py
docs/: ARCHITECTURE.md  Architecture_Review_and_Refactoring.md  BACKEND_PROCESSING.md  Chunk_Boundary_Transcription_Loss_Analysis.md
frontend/: app.js  index.html  styles.css
migrations/: env.py
migrations/versions/: 20240127_000001_001_initial_schema.py  20240128_000001_002_add_projects.py
src/stt_service/: config.py  main.py
src/stt_service/api/: dependencies.py
src/stt_service/api/routes/: __init__.py  auth.py  health.py  jobs.py  projects.py  settings.py  transcription.py  users.py
src/stt_service/api/schemas/: job.py  project.py  transcription.py  user.py
src/stt_service/core/: chunker.py  merger.py  orchestrator.py  retry.py
src/stt_service/db/: models.py  session.py
src/stt_service/db/repositories/: chunk.py  job.py  project.py  user.py
src/stt_service/providers/: __init__.py  base.py  elevenlabs.py  gemini.py  hispeech.py  wav.py  whisper.py
src/stt_service/services/: rate_limiter.py  storage.py
src/stt_service/utils/: error_classifier.py  exceptions.py  file_validation.py  logging_config.py  url_validation.py
src/stt_service/workers/: celery_app.py  tasks.py
tests/test_core/: test_chunker_boundaries.py  test_merger.py
tests/test_providers/: test_wav_parse.py
tests/test_utils/: test_file_validation.py  test_url_validation.py
tests/test_workers/: test_task_helpers.py
Մանե-Արփինե-օնլայն/: Մանե-Արփինե-օնլայն_transcript_(HiSpeech).txt
Վլադ-Արփինե-օֆֆլայն/: Վլադ-Արփինե-օֆֆլայն_transcript_(Google Gemini).txt  Վլադ-Արփինե-օֆֆլայն_transcript_(HiSpeech).txt
